2002-09-21  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/tex.scm (header-end): enclose lily output in begingroup/endgroup.

	* tex/lilyponddefs.tex: set hsize for plain tex, but only for
	positive line widths.

2002-09-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* tex/lilyponddefs.tex: Handle \scoreshift and \outputscale in one
	go.  Fix comments.

	* cygwin: Cygwin updates.

2002-09-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/windows/installing.texi (Top): version for python,
	urls for ghostscript (thanks to John Potelle)
	
	* lily/simultaneous-music-iterator.cc
	(Simultaneous_music_iterator): init children_list_ before
	triggering GC.

	* lily/*-iterator.cc: be even more careful with smobbed copy
	constructors. 

	* lily/break-align-engraver.cc (acknowledge_grob): also typeset
	LeftEdge item.

2002-09-15  Werner Lemberg  <wl@gnu.org>

	Improving LilyPond's output to make them ordinary TeX boxes with
	predictable dimensions.  System boxes are now vertically centered on
	the baseline; this offset can be further controlled with
	\lilypondscoreshift.

	* lily/system.cc (System::post_processing): Pass length of current
	system to `start-system' (including any horizontal indentation).

	* scm/tex.scm, scm/pdftex.scm: Make output of various functions
	prettier.
	(lily-def): Append `%'.
	(start-system): Add parameter `wd'.  Output more TeX code to specify
	box dimensions.
	(stop-system, stop-last-system): Complement changes in
	`start-system'.
	* scm/sketch.scm, scm/ps.scm, scm/pdf.scm, scm/ascii-script.scm:
	Updated.

	* scripts/ly2dvi.py (global_latex_definition): Set \parindent to 0.
	* buildscripts/mf-to-table.py (write_tex_defs): Append `%'.
	Write final `\endinput'.

	* tex/lily-ps-defs.tex, tex/lily-pdf-defs.tex,
	tex/lilypond-plaintex.tex, tex/lilypond-latex.tex,
	tex/lilyponddefs.tex, tex/titledefs.tex: Reformat code.  Assure that
	files and macro definitions don't produce spurious spaces and
	paragraphs (using \endlinechar).