@@ -1,6 +1,6 @@
+LilyPond development is hosted at:
 
-test
-LilyPond development is hosted at http://savannah.gnu.org/projects/lilypond
+    http://savannah.gnu.org/projects/lilypond
 
 Here is a simple explanation of the directory layout for LilyPond's
 source files.
